--- a/cmd/mistify-operator-admin/testconfig.json
+++ b/cmd/mistify-operator-admin/testconfig.json
@@ -2,7 +2,8 @@
     "db": {
         "driver": "postgres",
         "database": "testdb",
-        "username": "operator",
+        "username": "testoperator",
+        "password": "testpass",
         "host": "localhost",
         "port": 5432
     },
