Proof-of-concept for metrics + middleware, no tests, using foo as the name

--- a/cmd/mistify-operator-admin/testconfig.json
+++ b/cmd/mistify-operator-admin/testconfig.json
@@ -7,6 +7,16 @@
         "host": "localhost",
         "port": 5432
     },
+    "metrics": {
+        "sink_type": "Test",
+        "service_name": "operator-admin",
+        "host_name": "",
+        "enable_hostname": true,
+        "enable_runtime_metrics": true,
+        "enable_type_prefix": false,
+        "timer_granularity": "Millisecond",
+        "profile_interval": "Second"
+    },
     "mistify": {
         "foobar": {
             "baz": "default"
