Wrote middleware to automatically create keys from urls

--- a/cmd/mistify-operator-admin/testconfig.json
+++ b/cmd/mistify-operator-admin/testconfig.json
@@ -18,7 +18,17 @@
         "service_name": "operator-admin",
         "host_name": "",
         "timer_granularity": "Millisecond",
-        "profile_interval": "Second"
+        "profile_interval": "Second",
+        "url_to_key": {
+            "allowed_chunks": [
+                "ipranges",
+                "hypervisors",
+                "network",
+                "projects",
+                "users",
+                "permissions"
+            ]
+        }
     },
     "mistify": {
         "foobar": {
