ParseDuration method already exists; no need to create it

--- a/cmd/mistify-operator-admin/testconfig.json
+++ b/cmd/mistify-operator-admin/testconfig.json
@@ -11,8 +11,8 @@
         "sinks": [
             {
                 "sink_type": "Test",
-                "interval": "10*Second",
-                "retain": "5*Minute"
+                "interval": "10s",
+                "retain": "5m"
             }
         ],
         "service_name": "operator-admin",
