Changed over from a very flexible and complex build from config to a simple one: just set a service name and a statsd address
- Revised the metrics config to allow only those two options
- Added testing of the statsd address to config.Metrics.Validate()
- Removed the old errors and added a new one for bad statsd address
- Updated the config test to match
- Dropped the metrics-sink config and its test
- Pared down options in the test config to just a service name
- Moved MetricsContext into the metrics package so that it can be built there
- Revised the metrics package to always use a map sink and optionally add a
  statsd one if there's an address
- Updated the metrics test to check building a context with different config
  values and with the test config
- Updated http.go to call the metrics package for the context and to add a
  /metrics endpoint that shows the collected metrics as json
- Updated route register methods with new type and struct key name

--- a/cmd/mistify-operator-admin/testconfig.json
+++ b/cmd/mistify-operator-admin/testconfig.json
@@ -8,27 +8,7 @@
         "port": 5432
     },
     "metrics": {
-        "sinks": [
-            {
-                "sink_type": "Test",
-                "interval": "10s",
-                "retain": "5m"
-            }
-        ],
-        "service_name": "operator-admin",
-        "host_name": "",
-        "timer_granularity": "Millisecond",
-        "profile_interval": "Second",
-        "url_to_key": {
-            "allowed_chunks": [
-                "ipranges",
-                "hypervisors",
-                "network",
-                "projects",
-                "users",
-                "permissions"
-            ]
-        }
+        "service_name": "operator-admin"
     },
     "mistify": {
         "foobar": {
